Job working on Single thread fix

--- a/SpringDummyDataProject/src/main/resources/application.properties
+++ b/SpringDummyDataProject/src/main/resources/application.properties
@@ -7,8 +7,11 @@ spring.jpa.show-sql = false
 spring.jpa.hibernate.ddl-auto = none
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 server.port = 9191
+server.tomcat.threads.min=20
+server.tomcat.threads.max=50
 
 spring.datasource.hikari.connection-timeout = 20000
-spring.datasource.hikari.maximum-pool-size = 10
+spring.datasource.hikari.maximum-pool-size = 30
+spring.jpa.properties.hibernate.jdbc.batch_size = 100
 spring.datasource.hikari.minimum-idle = 20
 spring.datasource.hikari.idle-timeout = 300000
