--- a/SpringDummyDataProject/src/main/resources/application.properties
+++ b/SpringDummyDataProject/src/main/resources/application.properties
@@ -1,17 +1,22 @@
-spring.datasource.driver-class-name = com.mysql.jdbc.Driver
-spring.datasource.username = root
-spring.datasource.password = Sidhu@001
-spring.datasource.url = jdbc:mysql://localhost:3306/product_db
-spring.jpa.database = MYSQL
-spring.jpa.show-sql = false
-spring.jpa.hibernate.ddl-auto = none
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=Sidhu@001
+spring.datasource.url=jdbc:mysql://localhost:3306/product_db
+spring.jpa.database=MYSQL
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-server.port = 9191
+server.port=9191
 server.tomcat.threads.min=20
 server.tomcat.threads.max=50
 
-spring.datasource.hikari.connection-timeout = 20000
-spring.datasource.hikari.maximum-pool-size = 30
-spring.jpa.properties.hibernate.jdbc.batch_size = 100
-spring.datasource.hikari.minimum-idle = 20
-spring.datasource.hikari.idle-timeout = 300000
+spring.datasource.hikari.connection-timeout=20000
+spring.datasource.hikari.maximum-pool-size=30
+spring.jpa.properties.hibernate.jdbc.batch_size=100
+spring.datasource.hikari.minimum-idle=20
+spring.datasource.hikari.idle-timeout=300000
+
+jdbc.driverClassName=com.mysql.cj.jdbc.Driver
+jdbc.url=jdbc:mysql://localhost:3306/product_db
+jdbc.username=root
+jdbc.password=Sidhu@001
