--- a/SpringDummyDataProject/pom.xml
+++ b/SpringDummyDataProject/pom.xml
@@ -60,6 +60,17 @@
 			<version>20230227</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+			<version>6.3.1.Final</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>42.7.1</version>
+		</dependency>
 
 	</dependencies>
 
