--- a/SpringDummyDataProject/src/main/resources/application.properties
+++ b/SpringDummyDataProject/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 mysql.spring.datasource.username=root
-mysql.spring.datasource.password=Sidhu@001
+mysql.spring.datasource.password=*******
 mysql.spring.datasource.url=jdbc:mysql://localhost:3306/product_db
 
 postgresql.spring.datasource.username=postgres
-postgresql.spring.datasource.password=Sidhu@001
+postgresql.spring.datasource.password=********
 postgresql.spring.datasource.url=jdbc:postgresql://localhost:5432/testDb
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
